--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-camera": "^0.13.0",
+    "react-native-config": "^0.11.5",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27"
