--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.20.1",
     "native-base": "^2.3.7",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-config": "^0.11.5",
     "react-native-credit-card-input": "^0.4.1",
+    "react-native-datepicker": "^1.6.0",
+    "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27"
   },
