--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-config": "^0.11.5",
+    "react-native-contacts": "^2.1.1",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-datepicker": "^1.6.0",
     "react-native-google-places-autocomplete": "^1.3.6",
