--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-credit-card-input": "^0.4.1",
     "react-native-datepicker": "^1.6.0",
     "react-native-google-places-autocomplete": "^1.3.6",
+    "react-native-photo-upload": "^1.2.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27"
   },
